Fixed activity buttons spacing
The activity buttons broke off into two lines because of the width and the icons was spaced a little weird.

--- a/resources/assets/sass/people.scss
+++ b/resources/assets/sass/people.scss
@@ -619,7 +619,7 @@
     .list-actions {
       position: relative;
       text-align: center;
-      width: 60px;
+      width: 90px;
 
       a:first-child {
         margin-right: 5px;
@@ -628,6 +628,7 @@
       a.edit {
         position: relative;
         top: 1px;
+        margin-right: 5px;
       }
     }
 
